{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 107,
  "lineage": "c95af661-c4b8-4a05-ab49-72a5169ce725",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:221295402889:instance/i-01099d63ff15c1c77",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01099d63ff15c1c77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_greykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0193799dbe7fdb2e9",
            "private_dns": "ip-172-31-82-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.104",
            "public_dns": "ec2-13-220-163-88.compute-1.amazonaws.com",
            "public_ip": "13.220.163.88",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01be3d6ca3622e696",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "tf_module_ec2_sg-20250711205852880200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1fa102fc2e10acc",
            "tags": {
              "Name": "Nodejs-server"
            },
            "tags_all": {
              "Name": "Nodejs-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-00326193c7f0d142f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.tf_rds_instance",
            "aws_s3_bucket.tf_s3_bucket",
            "aws_s3_object.tf_s3_object",
            "aws_security_group.tf_rds_sg",
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221295402889:security-group/sg-0bb1ac806050c4323",
            "description": "Allow mysql traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb1ac806050c4323",
            "ingress": [
              {
                "cidr_blocks": [
                  "165.16.166.152/32"
                ],
                "description": "TCP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "TCP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00326193c7f0d142f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "221295402889",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fa6265d1f9e96be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.tf_module_ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221295402889:security-group/sg-00326193c7f0d142f",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00326193c7f0d142f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tf_module_ec2_sg-20250711205852880200000001",
            "name_prefix": "tf_module_ec2_sg-",
            "owner_id": "221295402889",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_module_ec2_sg"
            },
            "tags_all": {
              "Name": "tf_module_ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-04fa6265d1f9e96be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tf_module_ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2472047859",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-00326193c7f0d142f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.tf_module_ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 3000,
            "id": "sgrule-1117342994",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00326193c7f0d142f",
            "security_group_rule_id": "sgr-02222235ac98485ed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-3930803329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00326193c7f0d142f",
            "security_group_rule_id": "sgr-08183fe5aba200300",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 22,
            "id": "sgrule-1406565108",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00326193c7f0d142f",
            "security_group_rule_id": "sgr-0786db03cc70af5f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tf_module_ec2_sg.aws_security_group.this",
            "module.tf_module_ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}